#
# TODO: list of fixes, refactorings, optimizations and functionality for Avrora
#

================================ F I X E S ==================================
 Comp Module Item                                      Completion (Version)
-----------------------------------------------------------------------------
    2   util  StringUtil floating point conversion
    1  input  Catch recursive include errors
    1  input  Implement fill with value .db directive
    1   devs  EEPROM read/write delays
    1  probe  Counters, branchcounters
    2  probe  getDataByte() calls from within watches
    1   devs  Frame sizes in USART implementation
    1    sim  Out of bound accesses to SRAM, flash, EEPROM
    1   devs  USART baud rates
    1   devs  USART frame sizes
    1    sim  RAMPZ usage for with more than 128k of flash

    1  input  Fixed processing of -sections option                 (1.5.118)
    1  probe  Recursion in State.getDataByte() from within watch   (1.5.102)
    2   devs  Interrupt mappings for devices on ATMega32           (1.5.102)
    1  probe  Memory monitor not reporting all of memory            (1.5.94)
    1  radio  Deadlock problems in Freespace radio                  (1.5.91)
    2  probe  BatteryMonitor hang problems                          (1.5.88)
    1  probe  TransactionalList and related probe tests             (1.5.85)
    1  probe  Various bugfixes to GDB server by Jey Kottalam        (1.5.85)
    1  radio  SimpleAir.removeRadio() does not wake remaining nodes (1.5.81)
    1    sim  Fixed RSSI livelock problem in Freespace radio        (1.5.80)
    1    sim  Fixed dynamic code update problem                     (1.5.78)
    1    sim  Remove RAMPZ accesses for ATMega32                    (1.5.70)
    1  build  Fixed errors when building with javac in 1.5          (1.5.62)
    1  probe  Fix SerialMonitor                                     (1.5.58)
    1  probe  Fix StackMonitor                                      (1.5.58)